projects/examples/source/02.41.cpp
////////////////////////////////////////////////////////////////

// chapter : Basics of Programming

////////////////////////////////////////////////////////////////

// section : Functions and Algorithms

////////////////////////////////////////////////////////////////

// content : Dangling Pointers and Lvalue References
//
// content : Data and BSS Segments
//
// content : Static Objects
//
// content : Storage Class Specifier static

////////////////////////////////////////////////////////////////

#include <cassert>

////////////////////////////////////////////////////////////////

// auto   make_dangling_v1() { auto x = 1; return &x; } // error

// auto & make_dangling_v2() { auto x = 1; return  x; } // error

////////////////////////////////////////////////////////////////

auto const & make_integer()
{
	static auto x = 0; // support : compiler-explorer.com

	return ++x;
}

////////////////////////////////////////////////////////////////

int main()
{
//  assert(*make_dangling_v1() == 1); // error

//	assert( make_dangling_v2() == 1); // error

//  ------------------------------------------

    assert(make_integer() == 1);

    assert(make_integer() == 2);

    assert(make_integer() == 3);
}

////////////////////////////////////////////////////////////////